[package]
name = "rust-sdk"
version = "0.1.0"
edition = "2021"
description = "A comprehensive, production-grade Rust SDK with async operations, error handling, middleware, and database integration"
license = "MIT"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
config = "0.13"
dashmap = "5.5"
async-trait = "0.1"
bytes = "1.5"
futures = "0.3"
parking_lot = "0.12"
validator = { version = "0.16", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"
lru = "0.12"
backoff = { version = "0.4", features = ["tokio"] }
rand = "0.8"
base64 = "0.21"
hmac-sha256 = "1.1"
hex = "0.4"
ammonia = "4"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
criterion = "0.5"
rand = "0.8"
